fixed spacing of index page - removed scroll.

--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ p2 {
 
 .footer{
     background-color: #333333;
-        padding:1%;
+        padding:3%;
 }
 
 
